<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/faded_pizza_slices"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.karthik.myorder.MainActivity">

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:hint="@string/name"
            android:inputType="textCapWords"/>
        <TextView
            style="@style/HeaderTextStyle"
            android:textColor="@color/mainActivityText"
            android:text="@string/toppings"
            />

    <LinearLayout
        android:background="@color/mainActivityTheme"
        style="@style/CheckBoxLinearLayoutContainer">

        <LinearLayout
            style="@style/CheckBoxLinearLayoutRow">
            <CheckBox
                android:id="@+id/pineapple_checked"
                android:text="@string/pineapple"
                style="@style/CheckBoxRowStyle" />
            <CheckBox
                android:id="@+id/artichoke_checked"
                android:text="@string/artichoke"
                style="@style/CheckBoxRowStyle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/CheckBoxLinearLayoutRow">
            <CheckBox
                android:id="@+id/anchovy_checked"
                android:text="@string/anchovy"
                style="@style/CheckBoxRowStyle" />
            <CheckBox
                android:id="@+id/sausage_checked"
                android:text="@string/sausage"
                style="@style/CheckBoxRowStyle" />
        </LinearLayout>

    </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:textColor="@color/mainActivityText"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/mainActivityTheme"
            android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-" />
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@color/mainActivityTheme"
                android:text="@string/initial_quantity_value"
                android:textColor="@color/mainActivityText" />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btn_order"
            android:onClick="submitOrder"
            android:text="@string/order"
            style="@style/mainButton"
            />

        <Button
            android:id="@+id/btn_reset"
            android:onClick="reset"
            android:text="@string/reset"
            style="@style/mainButton"
            />

    </LinearLayout>

    </LinearLayout>

</ScrollView>

